# DSAIT4030-group12

./: .gitignore  README.md  dataset_loader.py  metrics.py  parse_losses.py  pyproject.toml  requirements.txt
diffuser/: diffuser_blocks.py  diffuser_ddpm_linear_schedule.py  diffuser_example.ipynb  diffuser_with_unet_example.ipynb  diffusion_ddpm.py  docs_diffuser.md  frequency_mse.py  frequency_weighted_noise.py  metrics.py  style_loss.py  time_embedding.py  toy_image_generator.py  toy_image_generator_example.py  unet.py  unet_config.py  unet_example_config.py
latent_diffusion/: diffuser_with_unet_example.ipynb  diffuser_with_unet_example_repa.ipynb  latent_diffusion_ddpm.py  latent_diffusion_ddpm_esm.py  latent_diffusion_ddpm_esm_sit.py  latent_diffusion_ddpm_evaluation.py  latent_diffusion_ddpm_evaluation_ddpm.py  latent_diffusion_ddpm_evaluation_dpmsolver++.py  latent_diffusion_ddpm_evaluation_sit_dsm_dpmsolver++.py  latent_diffusion_ddpm_evaluation_sit_esm_dpmsolver++.py  latent_diffusion_ddpm_evaluation_sit_esm_hf.py  latent_diffusion_ddpm_evaluation_sit_esm_lf.py  latent_diffusion_ddpm_evaluation_sit_esm_white_noise.py  latent_diffusion_ddpm_evaluation_sit_kl_dpmsolver++.py  latent_diffusion_ddpm_evaluation_unet_esm_dpmsolver++.py  latent_diffusion_ddpm_evaluation_unet_kl_dpmsolver++.py  latent_diffusion_ddpm_kl.py  latent_diffusion_ddpm_kl_sit.py  latent_diffusion_ddpm_kl_sit_colab_example.py  latent_diffusion_ddpm_repa.py  latent_diffusion_ddpm_sit.py  latent_diffusion_ddpm_sit_esm.py  latent_diffusion_ddpm_sit_esm_dog.py  latent_diffusion_ddpm_sit_esm_irepa.py  (+9 more)
(+52 files in other folders)
