[project]
name = "spectrum-matching-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "clean-fid>=0.1.35",
    "diffusers>=0.37.1",
    "gdown>=6.0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torch-fidelity>=0.4.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
    "transformers>=5.8.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["repa*", "diffuser*"]